# ionic_deckhandler

./: CONTRIBUTING.md  Cargo.toml  ChangeLog  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: card.rs  lib.rs  main.rs
tests/: test_card.rs
