[package]
name = "ionic_deckhandler"
version = "0.1.0"
authors = ["Jammyjamjamman <jdsherratt3@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# prevent accidental premature publishing to crates.io
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/card.rs"

[dependencies]
rand = "0.7"
