[package]
name = "ionic_deckhandler"
version = "0.1.0"
authors = ["Andy Alt <andy400-dev@yahoo.com>", "Jammyjamjamman <jdsherratt3@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust implementation of a deck creation and card shuffling library"
homepage = "https://github.com/TelluricDeckay/ionic_deckhandler"
repository = "https://github.com/TelluricDeckay/ionic_deckhandler"
readme = "README.md"
documentation = "https://docs.rs/ionic_deckhandler"

keywords = ["cards", "simulation", "chance", "library", "gamedev"]
categories = ["game-development", "simulation"]

# prevent accidental premature publishing to crates.io
# publish = false

[dependencies]
rand = "0.7"
